--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Tah Support - Facebook Bot
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -57,3 +57,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+BOT_VERIFY_TOKEN="INSERT_TOKEN_HERE"
+BOT_PAGE_ACCESS_TOKEN="INSERT_ACCESS_TOKEN_HERE"
